# huerise

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml  run_mcp.py
.claude/: settings.local.json
.github/skills/python-ddd-architecture/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6e482063878e_create_alarms_table.py
huerise/: lifespan.py  main.py
huerise/application/: ports.py
huerise/application/commands/: __init__.py  activate_alarm.py  cancel_alarm.py  create_one_time_alarm.py  create_recurring_alarm.py  deactivate_alarm.py  delete_alarm.py  delete_series.py  set_volume.py  snooze_alarm.py
huerise/application/queries/: __init__.py  list_alarms.py
huerise/application/scheduler/: __init__.py  runner.py  scheduler.py
huerise/domain/: __init__.py  alarm.py  exceptions.py  factory.py  repository.py  views.py
huerise/infrastructure/: __init__.py  credentials.py
huerise/infrastructure/adapters/: __init__.py  hue.py  mock_hue.py  pyaudio.py
huerise/infrastructure/di/: __init__.py  provider.py
huerise/infrastructure/persistence/: __init__.py  orm.py  repository.py
huerise/presentation/: exception_mappings.py  mapper.py  router.py  schemas.py
huerise/presentation/api/: exception_mappings.py  main.py  router.py  schemas.py
huerise/presentation/mcp/: __init__.py  alarm_tools.py  audio_tools.py  server.py
tests/application/: conftest.py
tests/application/commands/: test_activate_alarm_command.py  test_cancel_alarm_command.py  test_create_one_time_alarm_command.py  test_create_recurring_alarm_command.py  test_deactivate_alarm_command.py  test_delete_alarm_command.py  test_delete_series_command.py  test_set_volume_command.py  test_snooze_alarm_command.py
tests/application/queries/: test_list_alarms_query_handler.py
tests/application/scheduler/: test_alarm_runner.py  (+1 more)
tests/domain/: test_alarm_domain.py
(+1 files in other folders)
