[project]
name = "huerise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "hueify>=0.5.0",
    "dishka>=1.9.1",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.27",
    "pydantic>=2.12.5",
    "alembic>=1.18.4",
    "aiosqlite>=0.22.1",
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.34.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]
mcp = [
    "fastmcp>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
include = [
    "huerise/**/*.py",
    "huerise/assets/**/*",
]
